[package]
name = "ambisonic"
version = "0.3.1"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mbillingr/ambisonic"
description = "Compose and play 3D audio."
readme = "README.md"
edition = "2018"

categories = ["multimedia", "multimedia::audio", "game-engines"]
keywords = ["audio", "ambisonics", "3D", "sound", "gamedev"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
cpal = "< 0.12, >= 0.8"
rodio = "< 0.12, >= 0.9"
rand = {version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.3.0"
